---version 2.0.3 yet to be released---
19-oct-2008 - adelikat - winew - added a toggle for binding savestates to movies
18-oct-2008 - adelikat - Win32 - added -cfg (config file) command line argument
08-oct-2008 - zeromus - SF [ 2073105 ] Laptop Volume Control keys make FCEUX go crazy and crash
08-oct-2008 - zeromus - SF [ 2073113 ] Child windows inside debugging window get invalid sizes
08-oct-2008 - zeromus - SF [ 2153843 ] Lua ignores second joypad.set()
24-sep-2008 - punkrockguy318 - made the input config window more usable
24-sep-2008 - punkrockguy318 - --inputcfg can now be used without a filename
24-sep-2008 - punkrockguy318 - [ 2085437 ] should fix issues with missing author field crashing fceux
24-sep-2008 - punkrockguy318 - [ 2047057 ] added uninstall script for gfceux
24-sep-2008 - punkrockguy318 - [ 2062823 ] fixed ppc build errors and added LSB_FIRST option to build scripts
24-sep-2008 - punkrockguy318 - [ 2057006 ] --newppu option added to sdl, disabled by default
24-sep-2008 - punkrockguy318 - [ 2057008 ] lua is now optional, thanks shinydoofy for a patch.  also fixed some build issues.
22-sep-2008 - punkrockguy318 - [ 2008437 ] fixed an issue where flawed movie would crash fceux on every startup
21-aug-2008 - punkrockguy318 - sdl - fixed issue where windowed mode would
always be set to 32 bpp
18-aug-2008 - zeromus - windows - SF [ 2058942 ] Load state as... does not use the savestate override dir (fixed; now, it does)
18-aug-2008 - zeromus - windows - permit user optionally to proceed through the movie savestate mismatch error condition, in case he knows what he is doing.
18-aug-2008 - zeromus - fix a bug in the savestate recovery code which prevent aborted savestate loads from recovering emulator state correctly.
18-aug-2008 - zeromus - windows - bind a menu option for display framecounter